#Commit 23/06/2022: Refactor Template - Script page Lesson.

--- a/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
+++ b/src/resource/views/components/course-component/lesson-component/lesson-detail-component.hbs
@@ -20,38 +20,38 @@
                 <li><span>Chi tiết học phần</span></li>
             </ul>
         </div>
-        <div class="page-detail mb-5">
-            <div class="title-information">
-                <h2 class="information-title">Thông tin khóa học</h2>
-                <div class="custom-control custom-switch information-status" id="switched">
-                    <input type="checkbox" class="custom-control-input" id="Status">
-                    <label class="custom-control-label" for="Status">Trạng thái</label>
+        <form class="detail-form" id="lesson">
+            <div class="page-detail mb-5">
+                <div class="page-detail--information">
+                    <div class="title"><h2 class="title-page" id="Title-page">Title</h2></div>
+                    <div class="custom-control custom-switch ml-auto" id="switched">
+                        <input type="checkbox" class="custom-control-input" id="status">
+                        <label class="custom-control-label" for="status">Trạng thái</label>
+                    </div>
                 </div>
-            </div>
 
-            <form class="page-detail-form" id="Lesson">
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="Code">Mã Chương học</label>
-                            <input type="text" class="form-control" id="Code" disabled placeholder="Mã code">
+                            <label class="form-group--label" for="code">Mã Chương học</label>
+                            <input type="text" class="form-control" disabled id="code">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group hidden-group">
-                            <label class="form-group--label" for="CreateDate">Ngày tạo</label>
-                            <input type="datetime-local" step="0.001" class="form-control" disabled id="CreateDate">
+                            <label class="form-group--label" for="createDate">Ngày tạo</label>
+                            <input type="datetime-local" step="0.001" class="form-control" disabled id="createDate">
                             <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="Name">Tên bài học</label>
-                            <input type="text" class="form-control" id="Name">
+                            <label class="form-group--label" for="name">Tên bài học</label>
+                            <input type="text" class="form-control" id="name">
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group hidden-group">
-                            <label class="form-group--label" for="UpdateDate">Cập nhật gần đây</label>
-                            <input type="datetime-local" step="0.001" class="form-control" disabled id="UpdateDate">
+                            <label class="form-group--label" for="updateDate">Cập nhật gần đây</label>
+                            <input type="datetime-local" step="0.001" class="form-control" disabled id="updateDate">
                             <span class="form-message"></span>
                         </div>
                     </div>
@@ -63,9 +63,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="detail--serect"><button type="submit" class="btn-executed btn">Submit</button></div>
-            </form>
-        </div>
+            </div>
+            <div class="detail--serect mb-4"><button type="submit" class="btn-executed btn" id="Executed">Submit</button></div>
+        </form>
     </div>
 
     <script type="module" src="/static/js/lesson/lessonDetail.js"></script>
