--- a/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
+++ b/src/resource/views/components/course-component/unit-component/unit-detail-component.hbs
@@ -26,7 +26,7 @@
                     <div class="title"><h2 class="title-page" id="Title-page">Title</h2></div>
                     <div class="custom-control custom-switch ml-auto" id="switched">
                         <input type="checkbox" class="custom-control-input" id="status">
-                        <label class="custom-control-label" for="status">Trạng thái</label>
+                        <label class="custom-control-label" for="status">Trạng thái chương học</label>
                     </div>
                 </div>
 
