--- a/src/resource/views/components/course-component/course-detail-component.hbs
+++ b/src/resource/views/components/course-component/course-detail-component.hbs
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="page-detail--content">
-                    <div class="image-content">
+                    <div class="document-content">
                         <img src="/static/img/thumbnail_default.jpg" id="Thumbnail" alt="thumbnail">
                     </div>
                     <div class="blank-content">Chưa có thông tin...</div>
