--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -382,7 +382,7 @@ html, body {
         border: 1px solid #ccc;
         margin-top: 5px;
         padding: 10px;
-        .image-content {
+        .document-content {
             display: none;
             img {
                 height: auto;
