--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -77,7 +77,7 @@
             </div>
 
             {{!-- PASSWORD --}}
-            <div class="page-detail hidden">
+            <div class="page-detail">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Chỉnh sửa mật khẩu</h2></div>
                 </div>
@@ -99,36 +99,35 @@
                 </div>
             </div>
 
-            {{!-- REGISTER COURSE  CHƯA LÀM --}}
-            {{!-- <div class="page-detail hidden mb-3">
+            {{!-- REGISTER COURSE --}}
+            <div class="page-detail hidden mb-3">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Đăng ký học phần</h2></div>
                 </div>
                 <div class="row">
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label" for="Courses">Khóa học</label>
-                            <select class="custom-select" id="Courses">
-                                <option selected value="default">Danh mục khóa học</option>
-                            </select>
+                            <label class="form-group--label" for="courses">Khóa học</label>
+                            <select class="custom-select" id="courses"></select>
                             <span class="form-message"></span>
                         </div>
                     </div>
                     <div class="col-6">
                         <div class="form-group">
-                            <label class="form-group--label d-block" for="Courses">Chức năng</label>
-                            <button type="button" class="">Đăng ký</button>
-                            <button type="button" class="">Hủy đăng ký</button>
+                            <label class="form-group--label d-block">Chức năng</label>
+                            <button type="button" class="btn btn-executed" id="register" disabled>Đăng ký</button>
+                            <button type="button" class="btn btn-executed" id="unregister" disabled>Hủy đăng ký</button>
                         </div>
                     </div>
-                    <div class="col-12">
-                        <div class="register-content" id="RegisterContent">Content</div>
-                        <div class="register-blank" id="RegisterBlank">Blank</div>
-                    </div>
                 </div>
-            </div> --}}
+                <div class="page-detail--content">
+                        <div class="document-content" id="Content">Đã có nội dung</div>
+                        <div class="blank-content" id="Blank">Chưa có thông tin...</div>
+                </div>
+            </div>
+
             <div class="detail--serect mb-4">
-                <button type="submit" class="btn-executed btn" id="Executed">Submit</button>
+                <button type="submit" class="btn btn-executed" id="Executed">Submit</button>
             </div>
         </form>
     </div>
