--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -103,22 +103,9 @@
             <div class="page-detail hidden mb-3">
                 <div class="page-detail--information">
                     <div class="title"><h2 class="title-page">Đăng ký học phần</h2></div>
-                </div>
-                <div class="row">
-                    <div class="col-6">
-                        <div class="form-group">
-                            <label class="form-group--label" for="courses">Khóa học</label>
-                            <select class="custom-select" id="courses"></select>
-                            <span class="form-message"></span>
-                        </div>
-                    </div>
-                    <div class="col-6">
-                        <div class="form-group">
-                            <label class="form-group--label d-block">Chức năng</label>
-                            <button type="button" class="btn btn-executed" id="register" disabled>Đăng ký</button>
-                            <button type="button" class="btn btn-executed" id="unregister" disabled>Hủy đăng ký</button>
-                        </div>
-                    </div>
+                    <a class="header-router ml-auto mr-2" style="cursor:pointer;" id="redirect">
+                        <i class="fa fa-share mr-2" aria-hidden="true"></i></i>Đăng ký học phần
+                    </a>
                 </div>
                 <div class="page-detail--content">
                         <div class="document-content" id="Content">Đã có nội dung</div>
