--- a/src/resource/views/components/user-component/user-detail-component.hbs
+++ b/src/resource/views/components/user-component/user-detail-component.hbs
@@ -94,7 +94,7 @@
             </div>
             
             {{!-- PASSWORD --}}
-            <div class="page-detail hidden">
+            <div class="page-detail">
                 <div class="page-detail--information">
                     <div class="title">
                         <h2 class="title-common-page">Thông tin bảo mật</h2>
