--- a/src/resource/scss/app.scss
+++ b/src/resource/scss/app.scss
@@ -237,53 +237,6 @@ html, body {
     box-shadow: 0 0 2px #00000030;
     margin-top: 15px;
     padding: 15px;
-
-    // .title-information {
-    //     display: flex;
-    //     align-items: center;
-    //     .information-title {
-    //         font-size: 25px;
-    //         font-weight: 700;
-    //         margin-bottom: 15px;
-    //         text-transform: uppercase;
-    //     }
-    //     .information-status {
-    //         display: none;
-    //         margin-left: auto;
-    //         &.active {
-    //             display: block;
-    //         }
-    //     }
-    //     .information-thumbnail {
-    //         margin-left: auto;
-    //         position: relative;
-    //         #thumbnail {
-    //             bottom: 0px;
-    //             display: inline-block;
-    //             right: 0px;
-    //             height: 35px;
-    //             overflow: hidden;
-    //             position: absolute;
-    //             width:35px;
-    //             &:before {
-    //                 background-color: #f28d0f;
-    //                 border-radius: 2px;
-    //                 color: #ffffff;
-    //                 font-family: "FontAwesome";
-    //                 font-weight: 500;
-    //                 font-size: 17px;
-    //                 content: "\f1c5";
-    //                 display: inline-block;
-    //                 height: 35px;
-    //                 line-height: 35px;
-    //                 text-align: center;
-    //                 width: 35px;
-    //                 vertical-align: middle;
-    //             }
-    //         }
-    //     }
-    // }
-    
     .page-detail--information {
         display: flex;
         align-items: flex-start;
@@ -302,6 +255,15 @@ html, body {
                 margin-bottom: 5px;
                 text-transform: uppercase;
             }
+        }
+        .header-router {
+            border-radius: 5px;
+            background-color: #f28d0f;
+            color: white;
+            font-size: 14px;
+            font-weight: 600;
+            margin-bottom: 10px;
+            padding: 10px;
         }
         .custom-switch {
             display: none;
@@ -383,7 +345,19 @@ html, body {
         margin-top: 5px;
         padding: 10px;
         .document-content {
+            border-radius: 5px;
+            border: 1px solid #e7e7e7;
             display: none;
+            padding: 10px;
+            .document-content--items {
+                margin-bottom: 5px;
+                &:not(:first-child) {
+                    border-top: 1px solid #f6f6f6;
+                }
+                i.fa {
+                    color: #f28d0f;
+                }
+            }
             img {
                 height: auto;
                 width: auto;
