--- a/src/resource/views/components/client-component/client-register-component.hbs
+++ b/src/resource/views/components/client-component/client-register-component.hbs
@@ -15,7 +15,7 @@
                 <li><span>Đăng ký học phần</span></li>
             </ul>
         </div>
-        <form class="detail-form" id="Client">
+        <form class="detail-form" id="client">
             {{!-- INFORMATION --}}
             <div class="page-detail">
                 <div class="page-detail--information">
