--- a/src/resource/views/components/web-component.hbs
+++ b/src/resource/views/components/web-component.hbs
@@ -15,7 +15,7 @@
                 <div class="sliders-component">
                     <ul class="list-unstyled">
                         <li>
-                            <a href="#">
+                            <a href="/web/information">
                                 <i class="fa fa-user-circle-o" aria-hidden="true"></i>
                                 <span>Người dùng</span>
                             </a>
