#Commit 27/06/2022: Refactor page information.

--- a/src/resource/views/components/client-component/client-detail-component.hbs
+++ b/src/resource/views/components/client-component/client-detail-component.hbs
@@ -68,8 +68,8 @@
                             <span class="form-message"></span>
                         </div>
                         <div class="form-group">
-                            <label class="form-group--label" for="Address">địa chỉ</label>
-                            <input type="text" class="form-control" id="Address">
+                            <label class="form-group--label" for="address">địa chỉ</label>
+                            <input type="text" class="form-control" id="address">
                             <span class="form-message"></span>
                         </div>
                     </div>
@@ -108,8 +108,8 @@
                     </a>
                 </div>
                 <div class="page-detail--content">
-                        <div class="document-content" id="Content">Đã có nội dung</div>
-                        <div class="blank-content" id="Blank">Chưa có thông tin...</div>
+                        <div class="document-content" id="content">Đã có nội dung</div>
+                        <div class="blank-content" id="blank">Chưa có thông tin...</div>
                 </div>
             </div>
 
